# mkdocs-markgraf

./: .gitignore  README.md  pyproject.toml
.github/: release-notes.md
.github/scripts/: notify.mjs
.github/workflows/: pages.yml  publish.yml
example/: mkdocs.yml
example/docs/: index.md
src/mkdocs_markgraf/: plugin.py
src/mkdocs_markgraf/assets/: markgraf-embed.css  markgraf-embed.js
