[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-markgraf"
version = "0.1.9"
description = "MkDocs plugin that renders markgraf animations using the Canvas2D embed bundle."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Mark Eibes", email = "mark.eibes@gmail.com" }]
keywords = ["mkdocs", "mkdocs-plugin", "markgraf", "animation", "diagram", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup",
]
dependencies = ["mkdocs>=1.5"]

[project.urls]
Homepage = "https://github.com/markgrafhq/mkdocs-markgraf"
Source = "https://github.com/markgrafhq/mkdocs-markgraf"
Issues = "https://github.com/markgrafhq/mkdocs-markgraf/issues"

[project.entry-points."mkdocs.plugins"]
markgraf = "mkdocs_markgraf.plugin:MarkgrafPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mkdocs_markgraf = ["assets/*.js", "assets/*.css"]
